apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.phin3has.me
    external-dns.alpha.kubernetes.io/target: 54e08de2-5664-48f1-8fa4-26580666989f.cfargotunnel.com
spec:
  ports:
  - port: 80
    targetPort: 5678
    name: http
  selector:
    app: n8n
